--- a/my-strapi-app/package.json
+++ b/my-strapi-app/package.json
@@ -17,7 +17,9 @@
   },
   "dependencies": {
     "@strapi/plugin-cloud": "5.13.1",
+    "@strapi/plugin-graphql": "^5.14.0",
     "@strapi/plugin-users-permissions": "5.13.1",
+    "@strapi/provider-email-sendgrid": "^5.14.0",
     "@strapi/strapi": "5.13.1",
     "fs-extra": "^10.0.0",
     "mime-types": "^2.1.27",
